# teamcontext-mcp

./: .gitignore  CLAUDE.md  README.md  claude.backend.md  main.py  pyproject.toml
backend/: .ccignore  .env.example  pyproject.toml  requirements.txt  setup_database.py
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/db/: mongodb.py  snowflake.py
backend/app/models/: __init__.py  chunk.py  project.py  schemas.py  user.py
backend/app/routers/: auth.py  context.py  graphs.py  projects.py
backend/app/services/: auth_service.py  chunking.py  embedding_service.py  gemini.py  jwt_service.py  llm_service.py  snowflake_user_service.py
backend/app/utils/: graph.py  security.py
backend/teamcontext_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_chunking.py  test_rag_chatbot.py  test_rag_comprehensive.py  test_rag_rate_limited.py  test_rag_ultra_comprehensive.py
frontend/: .dockerignore  DOCKER.md  Dockerfile  README.md  README_CONFIG.md  VERCEL_DEPLOYMENT.md  docker-compose.yml  next.config.ts  package-lock.json  package.json  run_frontend.sh
frontend/.next/: trace
frontend/.next/server/: server-reference-manifest.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: KnowledgeGraph.tsx  PageTransition.tsx
frontend/src/config/: constants.ts
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: api.ts
mcp/: api.py  mcp_server.py  pyproject.toml  server.py
mcp_server/: .dockerignore  Dockerfile  api.py  cookies.txt  mcp_client.py  mcp_server.py  pyproject.toml
(+9 files in other folders)
