[project]
name = "teamcontext-backend"
version = "0.1.0"
description = "TeamContext API - MCP context sharing backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "motor>=3.3.2",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "email-validator>=2.3.0",
    "pymongo>=4.15.2",
    "plotly>=5.22.0",
    "sentence-transformers>=5.1.1",
    "snowflake>=1.8.0",
    "pytest>=8.4.2",
    "google-generativeai>=0.8.5",
    "google-genai>=1.41.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
